Updated Jacoco, and added a test-file to increase coverage. More coverage is needed.