@@ -100,7 +100,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testNoFilesInCollection() throws Exception {
         addDescription("Test that the workflow does nothing, when it has no files in the collection.");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(0));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(0));
 
         addStep("Run workflow for checking salted checksum.", "Should send alarm about failure");
 
@@ -123,7 +123,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testSuccess() throws Exception {
         addDescription("Test that the workflow works when both pillars deliver the same checksum.");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(1));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(1));
         when(model.getFileIDAtPosition(eq(TEST_COLLECTION), eq(0L))).thenReturn(TEST_FILE_1);
 
         doAnswer(new Answer() {
@@ -165,7 +165,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testOneComponentFailureAndTwoOtherAgreeOnChecksum() throws Exception {
         addDescription("Test that the workflow works when both pillars deliver the same checksum.");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(1));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(1));
         when(model.getFileIDAtPosition(eq(TEST_COLLECTION), eq(0L))).thenReturn(TEST_FILE_1);
 
         doAnswer(new Answer() {
@@ -210,7 +210,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testOneComponentFailureAndTwoOtherDisagreeOnChecksum() throws Exception {
         addDescription("Test that the workflow works when both pillars deliver the same checksum.");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(1));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(1));
         when(model.getFileIDAtPosition(eq(TEST_COLLECTION), eq(0L))).thenReturn(TEST_FILE_1);
 
         doAnswer(new Answer() {
@@ -256,7 +256,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testInconsistentChecksums() throws Exception {
         addDescription("Test that the workflow discovers and handles inconsistent checksums");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(1));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(1));
         when(model.getFileIDAtPosition(eq(TEST_COLLECTION), eq(0L))).thenReturn(TEST_FILE_1);
 
         doAnswer(new Answer() {
@@ -303,7 +303,7 @@ public class SaltedChecksumWorkflowTestFileInfos extends ExtendedTestCase {
     public void testNoReceivedChecksums() throws Exception {
         addDescription("Test that the workflow handles the case, when no checksums are received");
         addStep("Prepare for calls to mocks", "");
-        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(new Long(1));
+        when(model.getNumberOfFilesInCollection(anyString())).thenReturn(Long.valueOf(1));
         when(model.getFileIDAtPosition(eq(TEST_COLLECTION), eq(0L))).thenReturn(TEST_FILE_1);
 
         doAnswer(new Answer() {
